2005-10-20  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangleoptions.c: remove fixed-center stuff
	from options gui in order to simplify it.
	
2005-10-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/twain/twain.c: renamed menu entry to "Scanner/Camera"
	as suggested in bug #311965.

2005-10-20  Sven Neumann  <sven@gimp.org>

	* app/batch.c (batch_run): always call the batch interpreter in
	NON-INTERACTIVE mode (see bug #167964).

	* plug-ins/script-fu/script-fu-text-console.c: removed the run-mode
	check.

2005-10-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c (title_changed): replace newlines
	with spaces to avoid multiple lines in the combo box.

2005-10-20  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselectoptions.[ch]
	* app/tools/gimpforegroundselecttool.c: renamed "multiblob"
	property to "discontinuous" and added a check button for it.

2005-10-19  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpcroptool.c
	* app/tools/gimpnewrectselecttool.c
	* app/tools/gimprectangletool.[ch]: move tool_control out of
	rectangle tool and into users of it, and make rect select execute
	on leaving but crop tool not.  Also rename functions and clean up
	formatting a bit.

2005-10-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/plugin-browser.c: strip ellipsis from menu labels.

2005-10-19  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangletool.c: "execute" the tool if the
	user switches to a different tool or clicks in a different
	image.  Good for rect select, not so sure about crop.

2005-10-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/warp.c: use gimp_drawable_mask_intersect()
	instead of gimp_drawable_mask_bounds().

2005-10-19  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpcurvestool.[ch]: added keyboard control to the
	Curves tool as suggested in bug #154809.

2005-10-19  Sven Neumann  <sven@gimp.org>
